<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sapScanner="http://schemas.android.com/apk/res-auto">

    <item android:title="..."
        sapScanner:showAsAction="always|withText"
        android:icon="@android:drawable/ic_menu_share">
        <menu >
            <item
                android:id="@+id/menu_rw_export_to_xls"
                android:title="@string/menu_rw_export"
                android:icon="@drawable/ic_excel2"
                sapScanner:showAsAction="ifRoom|withText"

                sapScanner:icon="@drawable/ic_excel2"/>
            <item
                android:id="@+id/menu_pz_show_preferences"
                android:title="@string/menu_settings"
                android:icon="@drawable/ic_settings"
                sapScanner:icon="@drawable/ic_settings"
                sapScanner:showAsAction="ifRoom|withText" />
            <item
                android:id="@+id/menu_rw_lamp"
                android:title="@string/lampa"
                android:icon="@android:drawable/btn_star_big_on"
                sapScanner:icon="@android:drawable/btn_star_big_on"
                sapScanner:showAsAction="ifRoom|withText" />
        </menu>
    </item>

    <!--   android:showAsAction="ifRoom|withText"-->

    <!--    android:showAsAction="ifRoom|withText"-->
</menu>