<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="2"
            android:background="@drawable/btn_black"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/imageView"
                android:src="@drawable/images_small"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="2"
            android:gravity="center">

            <Button
                android:id="@+id/activity_main_bnt_rw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginRight="20dip"
                android:layout_marginTop="20dip"
                android:height="100dip"
                android:text="@string/btn_rw_main_activ_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:width="100dip"
                android:background="@drawable/btn_blue"
                android:textColor="@color/black_text_color" />

            <Button
                android:id="@+id/activity_main_btn_pz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dip"
                android:height="100dip"
                android:text="@string/btn_pz_main_activ_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:width="100dip"
                android:background="@drawable/btn_red"
                android:layout_marginLeft="20dip"
                android:textColor="@color/black_text_color" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:weightSum="1">

            <Button
                android:id="@+id/activity_main_btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/btn_serach_main_activ_text"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@drawable/btn_green"
                android:layout_marginRight="20dip"
                android:layout_marginLeft="10dip"
                android:width="100dip"
                android:height="50dip"
                android:layout_marginTop="20dip"
                android:textColor="@color/black_text_color"
                android:layout_weight="0.08" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_main_btn_inventory"
                android:layout_gravity="top"
                android:background="@drawable/btn_green"
                android:layout_marginRight="10dip"
                android:width="100dip"
                android:layout_marginLeft="20dip"
                android:height="50dip"
                android:textSize="10sp"
                android:layout_marginTop="20dip"
                android:textStyle="bold"
                android:textColor="@color/black_text_color"
                android:text="@string/label_inventory"
                android:layout_weight="0.08" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center">

            <Button
                android:id="@+id/activity_main_btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_settings_main_activ_text"
                android:textSize="14sp"
                android:textStyle="bold"

                android:width="150dip"
                android:onClick="setListFooter"
                android:layout_gravity="center_horizontal|top"
                android:background="@android:drawable/btn_default"
                android:textColor="@color/black_text_color" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
  